# ApplyDesk

./: .gitignore  README.md
backend/: pyproject.toml
backend/apps/applydesk/: apps.py  urls.py
backend/apps/applydesk/forms/: application.py  company.py  document.py  document_schema.py
backend/apps/applydesk/migrations/: 0001_initial.py  0002_alter_documentschemaversion_status.py  0002_application_created_at_application_notes_and_more.py  0003_alter_documentschemaversion_version.py  0003_rename_position_name_application_position_title.py  0004_alter_application_status.py  0004_remove_documentschemaversion_unique_draft_per_schema.py  0005_application_contact_email_application_contact_person_and_more.py  0005_documentschemaversion_applydesk_d_schema__e23ff5_idx.py  0006_alter_application_company_and_more.py  0006_alter_documentschemaversion_version.py  0007_alter_documentschemaversion_version.py  0007_applicationstatushistory.py  0008_documentschemaversion_updated_at.py
backend/apps/applydesk/models/: __init__.py  application.py  application_history.py  company.py  document.py  file.py  versioned.py
backend/apps/applydesk/queries/: applications.py  companies.py  document.py  document_schema.py  pipeline.py
backend/apps/applydesk/services/: analytics.py  attention_score.py  time_format.py
backend/apps/applydesk/templates/: base.html  dashboard.html
backend/apps/applydesk/templatetags/: applydesk_tags.py
backend/apps/applydesk/tests/: conftest.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py
(+159 files in other folders)
