[project]
name = "applydesk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.6",
    "django-stubs==6.0.6",
    "ruff==0.15.19",
    "ty==0.0.53",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "ruff>=0.15.14",
    "ty>=0.0.39",
]
test = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_tests.py"]
